lab/ingress-haproxy/httpbin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  type: ClusterIP

  selector:
    app: httpbin

  ports:
    - name: http
      port: 8000
      targetPort: http
